unpackaged/main/default/objects/SBQQ__UpgradeSource__c/fields/SBQQ__UpgradeConversionRate__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__UpgradeConversionRate__c</fullName>
    <description>The conversion rate between the upgrade product and the source product.</description>
    <inlineHelpText>Spécifiez un ratio pour la conversion de la quantité depuis la Source de mise à niveau vers Produit de mise à niveau. Par exemple, « 5:1 » indique que cinq unités de source de mise à niveau sont converties en une unité de produit de mise à niveau. Si ce champ est vide, aucun taux de conversion de mise à niveau n&#39;est appliqué.</inlineHelpText>
    <label>Upgrade Conversion Rate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>